Home About and Request page Done

--- a/src/index.scss
+++ b/src/index.scss
@@ -30,3 +30,8 @@ body {
   src: url("./shared/fonts/Poppins-Regular.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "DEG Regular";
+  src: url("./shared/fonts/PlaywriteDEGrund-Regular.ttf") format("truetype");
+}
+
