Redux store Implemented and Some Types added

--- a/src/components/doctors/index.scss
+++ b/src/components/doctors/index.scss
@@ -2,11 +2,11 @@
   background-color: #ffbf23;
   min-height: 400px;
   .title {
-    margin-bottom: 0 !important;
     padding-top: 20px;
     border-bottom: 2px solid #000;
     width: fit-content;
     margin: 0px auto;
     font-family: "Poppins Regular";
+    margin-bottom: 15px;
   }
 }
