--- a/src/components/doctors/request/index.scss
+++ b/src/components/doctors/request/index.scss
@@ -14,6 +14,13 @@
     label {
       font-family: "Poppins SemiBold";
     }
+    &-phoneRing {
+      width: 100px;
+      height: 100px;
+      position: absolute;
+      top: -50px;
+      right: -40px;
+    }
     &-field {
       border: 2px solid #000;
     }
