--- a/src/components/doctors/dentist/index.scss
+++ b/src/components/doctors/dentist/index.scss
@@ -9,18 +9,15 @@
     margin: 10px;
     &-image {
       border-radius: 5px;
-      border: 1px solid #000;
-      box-shadow: 0px 0px 5px #000;
       &:hover {
         box-shadow: none;
       }
     }
     &-description {
-      font-family: "Poppins Regular";
+      font-family: "Poppins SemiBold";
       text-align: center;
-      border: 1px solid #000;
-      box-shadow: 0px 0px 5px #000;
-      background-color: #edebe8;
+      background-color: transparent;
+      border: none;
       &:hover {
         box-shadow: none;
       }
