--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -17,9 +17,44 @@
       font-family: "Poppins Regular";
     }
   }
+  .branch {
+    &-title {
+      margin-bottom: 0;
+      font-family: "Poppins SemiBold";
+      color: #ffbf23;
+      font-size: 15px;
+      letter-spacing: 1px;
+    }
+    &-clinic {
+      margin: 0;
+      font-family: "Poppins Regular";
+      letter-spacing: 1px;
+    }
+    &-doctor {
+      font-family: "Poppins Regular";
+      letter-spacing: 1px;
+    }
+    &-role {
+      font-family: "Poppins Regular";
+      letter-spacing: 1px;
+      font-size: 12px;
+      color: #393b44;
+    }
+    &-address {
+      font-family: "Poppins Regular";
+      font-style: normal;
+      color: #393b44;
+      letter-spacing: 1px;
+    }
+    &-contact {
+      font-family: "Poppins Regular";
+      letter-spacing: 1px;
+      color: #393b44;
+    }
+  }
   .googleMap {
     iframe {
-      border: 2px solid #ffbf23;
+      border: 2px solid transparent;
       border-radius: 5px;
       width: 350px;
       height: 250px;
